log
Mon 13 May 2024 11:26:04 PM UTC: 
 tests:  0|5
total_score: 0/70
8bf7259
Tue 14 May 2024 12:26:32 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  1|5
total_score: 5/70
4c5f138
Tue 14 May 2024 12:27:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:32: error: multi-character character constant [-Werror=multichar]
   58 |            if(n->sudo[i][j] == '/0'){
      |                                ^~~~
cc1: all warnings being treated as errors
Compilation failed
8821ca1
Tue 14 May 2024 12:28:10 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
60a0e05
Tue 14 May 2024 12:30:52 AM UTC: 
 sudoku.c | 18 +++---------------
 1 file changed, 3 insertions(+), 15 deletions(-)
 tests:  1|5
total_score: 5/70
ff96a12
Tue 14 May 2024 12:31:25 AM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:76:9: error: implicit declaration of function ‘appendList’ [-Werror=implicit-function-declaration]
   76 |         appendList(list, adj_node);
      |         ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
04addbc
Tue 14 May 2024 12:31:32 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7078e15
Tue 14 May 2024 12:34:06 AM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
bb14929
Tue 14 May 2024 12:34:16 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b38c54a
Tue 14 May 2024 12:38:38 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
37669ff
Tue 14 May 2024 12:39:23 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
3ec99f0
Fri 17 May 2024 09:23:36 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:125:13: error: implicit declaration of function ‘isStackEmpty’ [-Werror=implicit-function-declaration]
  125 |     while (!isStackEmpty(stack)) {
      |             ^~~~~~~~~~~~
sudoku.c:127:25: error: void value not ignored as it ought to be
  127 |         Node* current = pop(stack);
      |                         ^~~
sudoku.c:138:26: error: void value not ignored as it ought to be
  138 |         while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
930438e
Fri 17 May 2024 09:24:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:127:25: error: void value not ignored as it ought to be
  127 |         Node* current = pop(stack);
      |                         ^~~
sudoku.c:138:26: error: void value not ignored as it ought to be
  138 |         while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                          ^
Compilation failed
ca1d014
Fri 17 May 2024 09:43:38 PM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:139:26: error: void value not ignored as it ought to be
  139 |         while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                          ^
Compilation failed
268b6a5
Fri 17 May 2024 09:45:09 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
6a392ea
Fri 17 May 2024 09:45:45 PM UTC: 
 sudoku.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:127:25: error: void value not ignored as it ought to be
  127 |         Node* current = pop(stack);
      |                         ^~~
sudoku.c:138:26: error: void value not ignored as it ought to be
  138 |         while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                          ^
Compilation failed
1fc25be
Fri 17 May 2024 09:45:55 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c:149:1: error: "/*" within comment [-Werror=comment]
  149 | /*
      |  
test.c: In function ‘test_dfs’:
test.c:206:19: error: implicit declaration of function ‘DFS’ [-Werror=implicit-function-declaration]
  206 |     Node* final = DFS(initial, &cont);
      |                   ^~~
test.c:206:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  230 |     final = DFS(initial, &cont);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
cccc7a7
